2007-10-29  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/utils.cc:
	* src/utils.h:
	* src/libgviewer/viewer-window.cc:
	Dropped duplicate code for help menus

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-user-actions.cc:
	Fixed bug in detecting key modifiers (wrong handling of key bindings)

2007-10-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/main.cc:
	Call gnome_vfs_init() & gnome_authentication_manager_init() in proper order

	* src/gnome-cmd-con-device.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-home.cc:
	* src/gnome-cmd-con-smb.cc:
	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-con.h:
	Added ConnectionMethodID info to GnomeCmdCon

2007-10-26  Piotr Eljasiak  <epiotr@use.pl>

	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-smb-auth.c:
	* src/gnome-cmd-smb-auth.h:
	Revert for removed gnome-cmd-smb-auth.* files

	* src/gnome-cmd-data.cc:
	Added new key ('/network/use_gnome_auth_manager') to cfg file

2007-10-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.h:
	* src/tags/gnome-cmd-tags.h:
	Yet another fix for gcc-4.2

2007-10-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-clist.cc:
	Fixed problem with sporadically lost cursor in file pane

2007-10-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.h:
	Yet another fix for gcc-4.2

2007-10-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.h:
	Fix for gcc-4.2 compiling problem

2007-10-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/bm_byte.c:
	* src/libgviewer/bm_byte.h:
	* src/libgviewer/bm_chartype.c:
	* src/libgviewer/bm_chartype.h:
	* src/libgviewer/cp437.h:
	* src/libgviewer/datapresentation.h:
	* src/libgviewer/fileops.c:
	* src/libgviewer/fileops.h:
	* src/libgviewer/gvtypes.h:
	* src/libgviewer/image-render.c:
	* src/libgviewer/image-render.h:
	* src/libgviewer/inputmodes.c:
	* src/libgviewer/inputmodes.h:
	* src/libgviewer/Makefile.am:
	* src/libgviewer/scroll-box.c:
	* src/libgviewer/scroll-box.h: