@@ -39,6 +39,7 @@ typedef enum
     GNOME_CMD_OPTIONS_DIALOG_TAB_LAYOUT,
     GNOME_CMD_OPTIONS_DIALOG_TAB_CONFIRMATION,
     GNOME_CMD_OPTIONS_DIALOG_TAB_FILTERS,
+    GNOME_CMD_OPTIONS_DIALOG_TAB_NETWORK,
     GNOME_CMD_OPTIONS_DIALOG_TAB_PROGRAMS,
     GNOME_CMD_OPTIONS_DIALOG_TAB_DEVICES
 } GnomeCmdOptionsDialogTab;
